fix: title shown in wrong position

--- a/app/assets/stylesheets/view.css.sass
+++ b/app/assets/stylesheets/view.css.sass
@@ -35,6 +35,10 @@ html, body
       -webkit-border-radius: 10px
       -moz-border-radius: 10px
 
+  #title
+    margin-left: 40%
+    float: left
+
   #selectors
     float: right
     margin-right: 20px
